--- a/client/app/navigation/_global-navbar.view.html
+++ b/client/app/navigation/_global-navbar.view.html
@@ -1,11 +1,11 @@
 <md-toolbar>
   <div class="md-toolbar-tools">
-    <h1>{{navbarData.brandName}}</h1>
+    <h1>{{navbarData?.brandName}}</h1>
     <!-- fill up the space between left and right area -->
     <span flex> </span>
     <span ng-if="vm.isLoggedIn()">
       <button class="md-raised-button md-accent">SETTINGS</button>
-      <h2>Hello, {{userInfo.firstName}}</h2>
+      <h2>Hello, {{userInfo?.username}}</h2>
     </span>
     <span ng-if="! vm.isLoggedIn()">
       <button class="md-raised-button md-accent">REGISTER</button>
@@ -13,14 +13,31 @@
     </span>
   </div>
 </md-toolbar>
+<nav md-tab-nav-bar>
+  <span>
+    <a md-tab-link [routerLink]=" ['./'] ">Index</a>
+  </span>
+|
+  <span>
+    <a md-tab-link [routerLink]=" ['./home'] ">Home</a>
+  </span>
+|
+  <span>
+    <a md-tab-link [routerLink]=" ['./detail'] ">Detail</a>
+  </span>
+|
+  <span>
+    <a md-tab-link [routerLink]=" ['./about'] ">About</a>
+  </span>
+|
+  <span>
+    <a md-tab-link [routerLink]=" ['./lobby'] ">Lobby</a>
+  </span>
+</nav>
 <!--
 <md-nav-bar md-selected-nav-item="vm.navData.activeTabId">
   <md-nav-item ng-repeat="tabModel in ::vm.navbarData.tabModels track by ::tabModel.tabId" md-nav-sref="{{tabModel.srefTarget}}" name="{{tabModel.tabId}}">
     {{tabModel.displayName}}
   </md-nav-item>
 </md-nav-bar>
--->:w
-:w
-/Ov
-<a [routerLink]="['/']">Home</a>
-<a [routerLink]="['/about']">About</a>
+-->
