--- a/client/app/_app.rootView.html
+++ b/client/app/_app.rootView.html
@@ -1,35 +1,4 @@
-<nav>
-      <span>
-        <a [routerLink]=" ['./'] ">
-          Index
-        </a>
-      </span>
-  |
-  <span>
-        <a [routerLink]=" ['./home'] ">
-          Home
-        </a>
-      </span>
-  |
-  <span>
-        <a [routerLink]=" ['./detail'] ">
-          Detail
-        </a>
-      </span>
-  |
-  <span>
-        <a [routerLink]=" ['./about'] ">
-          About
-        </a>
-      </span>
-  |
-  <span>
-        <a [routerLink]=" ['./lobby'] ">
-          Lobby
-        </a>
-      </span>
-</nav>
-
+<globalNav></globalNav>
 <main>
   <router-outlet></router-outlet>
 </main>
