--- a/client/app/authentication/_login-modal.view.html
+++ b/client/app/authentication/_login-modal.view.html
@@ -1,26 +1,22 @@
-<h1 class="modal-title" md-dialog-title flex="80">{{loginTitle}}</h1>
-<md-dialog-content flex="80">
-  <h4 class="modal-title">Please login</h4>
-  <p>Basic login or register form</p>
+<div class="row">
+  <h2 md-dialog-title class="float-left">Please login</h2>
+  <button md-dialog-close md-icon-button class="btn-danger float-right" aria-controls="Close"><md-icon aria-hidden="true">close</md-icon></button>
+</div>
+<md-dialog-content>
   <form class="form-horizontal" role="form" layout="column">
-    <md-input-container layout="row" layout-xs="column" md-no-float>
-      <label for="username" flex="15" flex-xs="25" class="control-label">Username</label>
-      <input type="text" class="form-control" id="username" flex="85" flex-xs="25" placeholder="Your Username"
-             [(ngModel)]="cred.username">
+    <md-input-container class="row">
+      <input md-input type="text" id="username" name="username" placeholder="Username" [(ngModel)]="cred.username">
     </md-input-container>
-    Forgot your username?  <!--a ui-sref="public.forgot.username">Click Here</a-->
-    <md-input-container layout="row" layout-xs="column" md-no-float>
-      <label for="password" flex="15" flex-xs="25" class="control-label">Password</label>
-      <input type="password" class="form-control" id="password" flex="85" flex-xs="25" placeholder="Your Password"
-             [(ngModel)]="cred.password">
+    <!--Forgot your username?  a ui-sref="public.forgot.username">Click Here</a-->
+    <md-input-container class="row">
+      <input md-input type="password" id="password" name="password" placeholder="Password" [(ngModel)]="cred.password">
     </md-input-container>
-    Forgot your password?  <!--a ui-sref="public.forgot.password">Click Here</a-->
+    <!--Forgot your password?  a ui-sref="public.forgot.password">Click Here</a-->
   </form>
-  <p [ngIf]="error != null">{{error}}</p>
+  <p *ngIf="error != null">{{error}}</p>
 </md-dialog-content>
-<md-dialog-actions flex="80">
-  <button class="close" md-dialog-close aria-hidden="true">&times;</button>
-  <button md-dialog-close class="md-danger md-raised">Cancel</button>
-  <button (click)="register()" class="md-warn md-raised">Sign Up</button>
-  <button (click)="login()" class="md-primary md-raised">Login</button>
+<md-dialog-actions class="d-flex flex-row-reverse">
+  <button md-raised-button (click)="login()" class="md-primary">Login</button>
+  <button md-raised-button (click)="register()" class="md-primary">Sign Up</button>
+  <button md-raised-button md-dialog-close class="mr-auto btn-danger">Cancel</button>
 </md-dialog-actions>
