--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <!--
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  -->
 
   <title><%= htmlWebpackPlugin.options.title %></title>
 
@@ -20,9 +22,7 @@
 
 <body>
 
-<app-root class="container">
-  Loading...
-</app-root>
+<app-root>Loading...</app-root>
 <div id="canvas-store"></div>
 
 <!-- Google Analytics -->
