UI Modularization and Scrolling

--- a/client/app/authentication/_login-modal.view.html
+++ b/client/app/authentication/_login-modal.view.html
@@ -3,7 +3,7 @@
   <div class="d-flex flex-md-row flex-column">
     <md-card>
       <md-card-actions>
-        <button md-raised-button class="p-1 p-md-3 md-primary" [routerLink]="['/login/google']">Login with Google
+        <button md-raised-button class="p-1 p-md-3 md-primary" routerLink="/login/google">Login with Google
         </button>
       </md-card-actions>
     </md-card>
