--- a/client/app/app-root/_app-root.view.html
+++ b/client/app/app-root/_app-root.view.html
@@ -1,15 +1,43 @@
-<div class="container-fluid">
-  <div class="fixed-top row">
-    <global-navbar (navbar)="onNavbarChange($event)"></global-navbar>
-  </div>
-  <main [ngClass]="{'with-navbar': hasNavbar, 'without-navbar': !hasNavbar}">
-    <router-outlet></router-outlet>
-  </main>
-  <footer>
-    <div class="fixed-bottom row">
-      <div class="col-12">
-        <span class="footer-text">&copy; John C. Heinnickel, 2017</span>
+<top-toolbar></top-toolbar>
+<button md-mini-fab (click)="sidenav.toggle()" style="position: fixed; z-index:3000;">
+  <md-icon>done</md-icon>
+</button>
+<router-outlet name="action" (deactivate)="onDeactivate($event)" (activate)="onActivate($event)"></router-outlet>
+<md-sidenav-container>
+  <inner-navbar></inner-navbar>
+  <md-sidenav #sidenav class="control-theme" mode="side" opened="true">
+    <div class="side-panel-container scroll-container">
+      <!--
+      <div class="toolbar-scrollable">
+        <router-outlet name="side" (deactivate)="onDeactivate($event)"
+                       (activate)="onActivate($event)"></router-outlet>
       </div>
+      <div class="toolbar-spacer"></div>
+      -->
+      <div class="scrollable">
+        <router-outlet name="side" (deactivate)="onDeactivate($event)"
+                       (activate)="onActivate($event)"></router-outlet>
+      </div>
+      <div class="footer-spacer"></div>
     </div>
-  </footer>
+  </md-sidenav>
+  <div class="main-panel-container scroll-container">
+    <!--
+    <div class="navbar-scrollable">
+      <router-outlet (deactivate)="onDeactivate($event)" (activate)="onActivate($event)"></router-outlet>
+    </div>
+    -->
+    <div class="navbar-spacer"></div>
+    <div class="scrollable">
+      <router-outlet (deactivate)="onDeactivate($event)" (activate)="onActivate($event)"></router-outlet>
+    </div>
+    <div class="footer-spacer"></div>
+  </div>
+</md-sidenav-container>
+<div class="fixed-bottom">
+  <div class="d-flex flex-column align-items-center">
+    <footer>
+      <span class="footer-text">&copy; John C. Heinnickel, 2017</span>
+    </footer>
+  </div>
 </div>
